update link to fb messenger on index.html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>BotFit - your personal fitness bot</title>
+    <title>Coachy - your personal fitness bot</title>
 
     <!-- favicons -->
     <link rel="apple-touch-icon" sizes="180x180" href="img/favicons/apple-touch-icon.png">
@@ -116,7 +116,7 @@
                     <p>Our fitness bot is available on your favorite messaging apps! Get it now to have a chat!</p>
                     <div class="badges">
                         <a class="badge-link" href="#"><img src="img/Messages-Android-R.png" alt=""></a>
-                        <a class="badge-link" href="https://www.facebook.com/startupmeifyoucan/"><img src="img/fb-messenger-icon.png" alt=""></a>
+                        <a class="badge-link" href="http://m.me/fitBotHackathon"><img src="img/fb-messenger-icon.png" alt=""></a>
                     </div>
                 </div>
             </div>
@@ -194,7 +194,7 @@
         <div class="cta-content">
             <div class="container">
                 <h2>Stop waiting.<br>Start training.</h2>
-                <a href="#contact" class="btn btn-primary btn-xl page-scroll">Let's have a chat! 
+                <a href="http://m.me/fitBotHackathon" class="btn btn-primary btn-xl page-scroll">Let's have a chat! 
                     <i class="fa fa-comments-o fa-3x aria-hidden="true"></i>
                 </a>
             </div>
@@ -210,7 +210,7 @@
                     <a href="#"><i class="fa fa-twitter"></i></a>
                 </li>
                 <li class="social-facebook">
-                    <a href="#"><i class="fa fa-facebook"></i></a>
+                    <a href="https://www.facebook.com/fitBotHackathon"><i class="fa fa-facebook"></i></a>
                 </li>
                 <li class="">
                     <a href="https://github.com/toomai/Hackathon"><i class="fa fa-github-alt"></i></a>
